Bump openjfx.version from 11.0.2 to 12.0.1 (#1933)
Bumps `openjfx.version` from 11.0.2 to 12.0.1.

Updates `javafx-controls` from 11.0.2 to 12.0.1

Updates `javafx-web` from 11.0.2 to 12.0.1

Signed-off-by: dependabot[bot] <support@dependabot.com>